k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tastmanagement-app
  namespace: tastmanagement
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tastmanagement-app
  template:
    metadata:
      labels:
        app: tastmanagement-app
    spec:
      containers:
      - name: tastmanagement
        image: ghcr.io/badraalou/task-management-cicd:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: tastmanagement-service
  namespace: tastmanagement
spec:
  selector:
    app: tastmanagement-app
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tastmanagement-ingress
  namespace: tastmanagement
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tastmanagement.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tastmanagement-service
            port:
              number: 80
